--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -22,20 +22,62 @@
 </style>
 <body class="WebContainer">
     <p>&nbsp;</p>
-    <h3 align="center">TY Time-Table 2021 Sem V</h3>
-    <h4 align="center"> Div - B </h4>
+    <h3 align="center"style="text-shadow: 4px 4px 4px #aaa;">TY Time-Table 2021 Sem V</h3>
+    <h4 align="center"style="text-shadow: 4px 4px 4px #aaa;"> Div - B </h4>
 <table border=1 cellspacing="1" cellpadding="10" align = "center"  border color="black" >
 
 <p>&nbsp;</p>
-<tr align ="center"><td>Time </td><td>MONDAY</td> <td>TUESDAY</td> <td>WEDNESDAY</td> <td>THURSDAY</td> <td>FRIDAY</td> <td>SATURDAY</td></tr>
-<tr align ="center"><td>9:15 - 10:15 </td><td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td> <td> <a href="https://bit.ly/3AYKr2d"target="_blank"><font  color="Black">CGMT</font></a><br>AP</td></font> <td rowspan="2"><a href=""target="_blank"><font  color="Black"> T5 DAA  <br>  T6 AP </font></a></td></font>   
-<tr align ="center"><td>10:15 - 11:15 </td><td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td> <td> <a href="https://bit.ly/IoT_Tues"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/3hCOREA"target="_blank"><font  color="Black">Cyber Security</font></a></td>
-<tr align ="center"><td>11:30 - 12:30 </td><td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP</font></a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/IoT_Wed"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/3kdN5eI"target="_blank"><font  color="Black">Cyber Security</font></a> </td> <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP</font></a></td> <td rowspan="2"> <a href=""target="_blank"><font  color="Black">Mini-Project</font></a></td>     
-<tr align ="center" ><td>12:30 - 13:30 </td><td> <a href="https://bit.ly/3AYKr2d"target="_blank"><font  color="Black">CGMT</font></a><br>AP</td> <td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td><td> <a href="https://bit.ly/3k9oDLr"target="_blank"><font  color="Black">Cyber Security</font></a></td> <td> <a href="https://bit.ly/IoT_Thurs"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/TY_Technical_Writing"target="_blank"><font  color="Black">Technical Writting</font></a></td>  
-<tr align ="center" ><td>14:15 - 16:15 </td><td> <a href=""target="_blank"><font  color="Black">SPC T8</font></a></td> <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP LAB T8</font></a></td> <td> <a href="https://bit.ly/DAA_LAB_TYB"target="_blank"><font  color="Black">DAA LAB T8</font> </a></td> <td> <a href="https://bit.ly/3xEsZOl"target="_blank"><font  color="Black">CGMT LAB</font></a></td><td> <a href="https://bit.ly/TY_Technical_Writing"target="_blank"><font  color="Black">TW(T)</font></a></td> <td><font  color="Black">-</font></td>
+<tr align ="center">
+    <td>Time </td>
+    <td>MONDAY</td>
+    <td>TUESDAY</td> 
+    <td>WEDNESDAY</td>
+    <td>THURSDAY</td>
+    <td>FRIDAY</td>
+    <td>SATURDAY</td>
+</tr>
+<tr align ="center">
+    <td>9:15 - 10:15 </td>
+    <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> 
+    <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> 
+    <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> 
+    <td> <a href=""target="_blank"><font  color="Black">SPC</font></a></td> 
+    <td> <a href="https://bit.ly/3AYKr2d"target="_blank"><font  color="Black">CGMT</font></a><br>AP</td></font> 
+    <td rowspan="2"><a href=""target="_blank"><font  color="Black"> T5 DAA  <br>  T6 SPC <br>T8 SPC</font></a></td></font>
+</tr>      
+<tr align ="center"><td>10:15 - 11:15 </td>
+    <td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td> 
+    <td> <a href="https://bit.ly/IoT_Tues"target="_blank"><font  color="Black">IoT</font></a></td> 
+    <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> 
+    <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> 
+    <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP</font></a></td>
+    </tr>
+<tr align ="center"><td>11:30 - 12:30 </td>
+    <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP</font></a></td> 
+    <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">TW</font></a></td> 
+    <td> <a href="https://bit.ly/IoT_Wed"target="_blank"><font  color="Black">IoT</font></a></td> 
+    <td> <a href="https://bit.ly/3kdN5eI"target="_blank"><font  color="Black">Cyber Security</font></a> </td>
+     <td> <a href=""target="_blank"><font  color="Black">SPC</font></a></td> 
+     <td rowspan="2"> <a href=""target="_blank"><font  color="Black">Mini-Project</font></a></td>
+</tr>     
+<tr align ="center" ><td>12:30 - 13:30 </td>
+    <td> <a href="https://bit.ly/3AYKr2d"target="_blank"><font  color="Black">CGMT</font></a><br>AP</td> 
+    <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td>
+    <td> <a href="https://bit.ly/3k9oDLr"target="_blank"><font  color="Black">Cyber Security</font></a></td> 
+    <td> <a href="https://bit.ly/IoT_Thurs"target="_blank"><font  color="Black">IoT</font></a></td> 
+    <td> <a href="https://bit.ly/3hCOREA"target="_blank"><font  color="Black">Cyber Security</font></a></td>
+</tr>  
+<tr align ="center" ><td>14:15 - 16:15 </td>
+    <td> <a href=""target="_blank"><font  color="Black">-</font></a></td> 
+    <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP LAB T8</font></a></td> 
+    <td> <a href="https://bit.ly/DAA_LAB_TYB"target="_blank"><font  color="Black">DAA LAB T8</font> </a></td> 
+    <td> <a href="https://bit.ly/3xEsZOl"target="_blank"><font  color="Black">CGMT LAB</font></a></td>
+    <td> <a href="https://bit.ly/TY_Technical_Writing"target="_blank"><font  color="Black">TW(T)</font></a></td> 
+    <td><font  color="Black">-</font></td>
+</tr>
 </font>
 </table>
-
+<iframe width="980" height="410" src="https://mars.nasa.gov/layout/embed/send-your-name/future/certificate/?cn=889416017416" frameborder="0"></iframe>
 <!--<h1 align="center"><font face="Poiret One"> Under Maintanance:</font></h1>-->
 <div class="footer">
 <p>&nbsp;</p><p>&nbsp;</p> 
@@ -47,7 +89,7 @@
 <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 1px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 49px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 95px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 142px;"></a> 
 </p>
 </div>
-<p align="center">Note: All the lecture links are provided by valid sources but may vary depending if new links are created or updated.</p>
+<p align="center"style="text-shadow: 4px 4px 4px #aaa;">Note: All the lecture links are provided by valid sources but may vary depending if new links are created or updated.</p>
 </body>
 
 </html>
