--- a/Timetable_A.html
+++ b/Timetable_A.html
@@ -51,7 +51,7 @@
       <td rowspan="2"> <a href=""target="_blank"><font  color="Black">T3 SPC <br> T4 SPC </font></a></td></font> 
 </tr>         
 <tr align ="center"><td>10:15 - 11:15 </td>
-    <td> <a href="https://bit.lyspcty2021"target="_blank"><font  color="Black">SPC</font></a></td> 
+    <td> <a href=""target="_blank"><font  color="Black">SPC</font></a></td> 
     <td> <a href="https://bit.ly/IoT_Tues"target="_blank"><font  color="Black">IoT</font></a></td> 
     <td> <a href="https://bit.ly/daa2021"target="_blank"><font  color="Black">DAA</font></a></td>
      <td> <a href="https://bit.ly/daa2021"target="_blank"><font  color="Black">DAA</font></a></td> 
