--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -28,13 +28,13 @@
 
 <p>&nbsp;</p>
 <tr align ="center">
-    <td>Time </td>
-    <td>MONDAY</td>
-    <td>TUESDAY</td> 
-    <td>WEDNESDAY</td>
-    <td>THURSDAY</td>
-    <td>FRIDAY</td>
-    <td>SATURDAY</td>
+    <th>Time </th>
+    <th>MONDAY</th>
+    <th>TUESDAY</th> 
+    <th>WEDNESDAY</th>
+    <th>THURSDAY</th>
+    <th>FRIDAY</th>
+    <th>SATURDAY</th>
 </tr>
 <tr align ="center">
     <td>9:15 - 10:15 </td>
@@ -57,7 +57,7 @@
     <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">TW</font></a></td> 
     <td> <a href="https://bit.ly/IoT_Wed"target="_blank"><font  color="Black">IoT</font></a></td> 
     <td> <a href="https://bit.ly/3kdN5eI"target="_blank"><font  color="Black">Cyber Security</font></a> </td>
-     <td> <a href=""target="_blank"><font  color="Black">SPC</font></a></td> 
+     <td> <a href="https://bit.ly/2VX1ams"target="_blank"><font  color="Black">SPC</font></a></td> 
      <td rowspan="2"> <a href=""target="_blank"><font  color="Black">Mini-Project</font></a></td>
 </tr>     
 <tr align ="center" ><td>12:30 - 13:30 </td>
