--- a/Index.html
+++ b/Index.html
@@ -24,8 +24,10 @@
 <p align = "center"> <font face="Lobster" color="black">SELECT YOUR DIVISION</p> </font>
 <p align = "center"><a href="Timetable_A.html" target="_self"><font face="Lobster" color="black"> Division A</a></p></font>
 <p align = "center"><a href="Timetable_B.html" target="_self"> <font face="Lobster" color="black"> Division B</a></p></font>
+<p>&nbsp;</p><p>&nbsp;</p>
+
 <p>&nbsp;</p><p>&nbsp;</p> 
-    <p>&nbsp;</p><p>&nbsp;</p> 
+<h4 style="">Last Updated: 21 August 2021</h4> 
 </p>
    <div  class="footer">
     <p style=" position: absolute;bottom: 20px; right: 10px;"><font face="Lobster" color="#D6D6D6"size="3">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="D6D6D6" size="-1">ShivamNimbalkar</font></a></p>
@@ -34,7 +36,7 @@
     <p style="position: absolute;bottom: 45px;left: 1px;"><font face="Lobster" color="#D6D6D6" size="-1">Follow us on :</font></p>
     <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 1px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 47px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 96px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 144px;" > 
     </p>
-
+     
    </div>
 </body>
 </head>
