--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <html>
 <head> <title> TY Time-Table 2021 Division B </title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
