--- a/Timetable_A.html
+++ b/Timetable_A.html
@@ -10,8 +10,7 @@
 
     <style>
              .WebContainer{
-    width:100%;
-    min-width:1000px;
+    width:auto;
     height:auto;
      }
     body{
@@ -92,7 +91,7 @@
 <div class="footer">
 <p style=" position: absolute;bottom: 20px; right: 10px;"><font face="Lobster" color="#D6D6D6"size="3">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="#D6D6D6"size="3">ShivamNimbalkar</font></a></p></font>
 <p style=" position: absolute;bottom: 1px; right: 160px;"><font face="Lobster" color="#D6D6D6"size="3">© All Rights Reserved</p> </font>
-<p style="position: absolute;bottom: -5px; left: 400px;"><font face="Lobster" color="#D6D6D6"size="1">Last Updated: 21 August 2021</p></font>
+<p style="position: absolute;bottom: -5px; left: 625px;"><font face="Lobster" color="#D6D6D6"size="1">Last Updated: 21 August 2021</p></font>
 <p>
 <p style="position: absolute;bottom: 35px;left: 1px;"><font face="Lobster" color="#D6D6D6">Follow us on :</p></font>
 <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 0px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 48px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 95px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 142px;"></a> 
