--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
 <head>
 <title>TY CSE ADCET</title>
 <meta charset="UTF-8">
+<link rel = "icon" href = "my-timetable.png" type = "image/x-icon">
 </head>
 
     <style>
