--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
+<link rel = "icon" href = "my-timetable.png" type = "image/x-icon">
 <head> <title> TY Time-Table 2021 Division B </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
