--- a/Timetable_A.html
+++ b/Timetable_A.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <html>
 <head> <title> TY Time-Table 2021 Division A </title>
-    <link rel = "icon" href = "my-timetable.png" type = "image/x-icon">
+    <link rel = "icon" href = "https://fonts.google.com/icons?selected=Material%20Icons%3Aschedule%3A" type = "image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
