--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,8 @@
 <head>
 <title>TY CSE ADCET</title>
 <meta charset="UTF-8">
-<link rel = "icon" href = "https://fonts.google.com/icons?selected=Material%20Icons%3Aschedule%3A" type = "image/x-icon">
+<meta name="discription" content="adcet.in, adcet,timetable adcet,cse adcet,ADCET CSE, CSE ADCET"/>
+<link rel = "icon" href = "my-timetable.png" type = "image/x-icon">
 </head>
 
     <style>
