--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
-<link rel = "icon" href = "https://fonts.google.com/icons?selected=Material%20Icons%3Aschedule%3A" type = "image/x-icon">
+<link rel = "icon" href = "my-timetable.png" type = "image/x-icon">
 <head> <title> TY Time-Table 2021 Division B </title>
     <meta charset="UTF-8">
+    <meta name="discription" content="adcet.in, adcet,timetable adcet,cse adcet,ADCET CSE, CSE ADCET"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
