--- a/Index.html
+++ b/Index.html
@@ -3,26 +3,13 @@
 <html>
 <head>
 <title>TY CSE ADCET</title>
+<script src="https://kit.fontawesome.com/8fd47592c4.js" crossorigin="anonymous"></script>
 <meta charset="UTF-8">
 <meta name="discription" content="adcet.in, adcet,timetable adcet,cse adcet,ADCET CSE, CSE ADCET"/>
 <link rel = "icon" href = "my-timetable.png" type = "image/x-icon">
 </head>
-
-    <style>
-        .WebContainer{
-    width:auto;
-    height:auto;
-}
-        .footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 13%;
-  background-color:#172337;
-  }
-</style>
-<body bgcolor="#F8F2F2" class="WebContainer"> 
+<body class="WebContainer"> 
+    <!--
 <p>
     &nbsp;
 <p align = "center"> <font face="Lobster" color="black">SELECT YOUR DIVISION</p> </font>
@@ -31,16 +18,18 @@
 <p>&nbsp;</p><p>&nbsp;</p>
 
 <p>&nbsp;</p><p>&nbsp;</p> 
-   <div  class="footer">
-    <p style=" position: absolute;bottom: 20px; right: 10px;"><font face="Lobster" color="#D6D6D6"size="3">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="D6D6D6" size="-1">ShivamNimbalkar</font></a></p>
-    <p style=" position: absolute;bottom: 1px; right: 128px;"><font face="Lobster" color="#D6D6D6"size="3"> © All Rights Reserved</p> </font>
-    <p style="position: absolute;bottom: -5px; left: 625px;"><font face="Lobster" color="#D6D6D6"size="1">Last Updated: 25 August 2021</p></font> 
-    <p>
-    <p style="position: absolute;bottom: 45px;left: 5px;"><font face="Lobster" color="#D6D6D6" size="-1">Follow us on :</font></p>
-    <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 1px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 47px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 96px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 144px;" > 
-    </p>
-     
-   </div>
+<footer class="footer">
+ <div class=texts>
+     <h3>follow us on :</h3>
+ </div>    
+<div class=icons>
+<i class="social-icon fa fa-facebook" href="https://www.facebook.com/"></i>
+<i class="social-icon fa fa-envelope-square" href="mailto:shivamnimbalkar3901@gmail.com"></i>   
+<i class="social-icon fa fa-instagram" href="https://www.instagram.com/shiv"></i>
+<i class="social-icon fa fa-linkedin" href="https://www.linkedin.com/"></i> 
+</div>
+</footer>
+-->
+<h1 align="center"><font face="Poiret One"> Under Maintanance:</font></h1>
 </body>
-</head>
 </html>
