--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -34,6 +34,7 @@
     <p>&nbsp;</p>
     <h3 align="center"style="text-shadow: 4px 4px 4px #aaa;">TY Time-Table 2021 Sem V</h3>
     <h4 align="center"style="text-shadow: 4px 4px 4px #aaa;"> Div - B </h4>
+    <!--
 <table border=1 cellspacing="1" cellpadding="10" align = "center"  border color="black" >
 
 <p>&nbsp;</p>
@@ -87,7 +88,9 @@
 </tr>
 </font>
 </table>
-<!--<h1 align="center"><font face="Poiret One"> Under Maintanance:</font></h1>-->
+-->
+<h1 align="center"><font face="Poiret One"> Under Maintanance:</font></h1>
+<!--
 <div class="footer">
 <p>&nbsp;</p><p>&nbsp;</p> 
 <p>&nbsp;</p><p>&nbsp;</p> 
@@ -100,6 +103,7 @@
 </p>
 </div>
 <p align="center"style="text-shadow: 4px 4px 4px #aaa;">Note: All the lecture links are provided by valid sources but may vary depending if new links are created or updated.</p>
+-->
 </body>
 
 </html>
